
-------------------------------------------------------------------------------

Sun Feb 27 15:39:37 GMT 2000
(gilbertt)

*cough*. Now the remember ipc should actually *work*. Sorry ;)

-------------------------------------------------------------------------------

Sun Feb 27 15:54:11 GMT 2000
(gilbertt)

remove a debugging printf

-------------------------------------------------------------------------------

Mon Feb 28 18:04:33 GMT 2000
(gilbertt)

Did what I should have in the first place: consolidated all those window
list options into one winop: "Skip Window Lists", and one remember option.

The actions are still defined to do stuff individually, but users have no
need of that sort of granularity. Much nicer now :)

-------------------------------------------------------------------------------

Mon Feb 28 19:39:46 GMT 2000
(gilbertt)

64-bit fixes from Bob Arendt <rdarendt@cwcom.net>

-------------------------------------------------------------------------------

Tue Feb 29 19:44:59 GMT 2000
(gilbertt)

Hehe. Typo stopped the list skip thing being loaded from the .snaps.x file.
Fixed.

-------------------------------------------------------------------------------

Tue Mar 14 18:57:38 CET 2000
(Christian)

Small fix for people who want to pop up
menus using their keyboard.

-------------------------------------------------------------------------------

Tue Mar 14 20:23:53 CET 2000
(Saur)

Added patch from Masahiko Mori <masa@cthulhu.engr.sgi.com>
to improve localization support (I modified the patch somewhat).

-------------------------------------------------------------------------------

Tue Mar 14 22:23:27 GMT 2000
(gilbertt)

Patches from Bob Arendt <rdarendt@cwcom.net> to enable a user-configurable
cache-dir. Solves some preformance problems on NFS-mounted home directories.
Also fixes a couple of bugs with the current -econfdir option.

I've tested this fairly well, as has Bob, but let me know if there are any
problems.
