@@ -126,8 +126,7 @@ GetNetText(char *URL)
 
 }
 
-time_t
-GetNetFileDate(char *URL)
+time_t GetNetFileDate(char *URL)
 {
 
 #ifdef AUTOUPGRADE
