@@ -557,6 +557,7 @@ SetupX()
 #endif /* WITH_TARTY_WARP */
    mode.warp_on_next_focus = 0;
    mode.warpsticky = 1;
+   mode.warpshaded = 1;
    mode.edge_flip_resistance = 15;
    mode.context_ewin = NULL;
    mode.moveresize_pending_ewin = NULL;
@@ -739,8 +740,7 @@ SetupEnv()
    return;
 }
 
-Window
-MakeExtInitWin(void)
+Window MakeExtInitWin(void)
 {
    Display            *d2;
    Window              win;
