@@ -140,10 +140,11 @@ WarpFocus(int delta)
 		  if (((ewin->sticky) || (ewin->desktop == desks.current)) &&
 		      (ewin->x + ewin->w > 0) && (ewin->x < root.w) &&
 		      (ewin->y + ewin->h > 0) && (ewin->y < root.h) &&
-		      (!ewin->skipfocus) && (!ewin->shaded) &&
-		      (!ewin->menu) && (!ewin->pager) &&
-		      !(ewin->sticky && !mode.warpsticky) &&
-		      (!ewin->ibox) && (!ewin->iconified)
+		      (!ewin->skipfocus) && !(ewin->shaded && !mode.warpshaded)
+		      && (!ewin->menu) && (!ewin->pager) && !(ewin->sticky
+							      && !mode.
+							      warpsticky)
+		      && (!ewin->ibox) && (!ewin->iconified)
 		      /*&& (ewin->client.mwm_decor_title) &&
 		       * (ewin->client.mwm_decor_border) */
 		     )
